# FlipDoc

./: .gitignore  .replit  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  replit.md  requirements.txt  vercel.json
attached_assets/: Pasted--FastAPI-Next-js-PDF-to-Word-Converter-Complete-Replit-Prompt-Create-a-professional-lightni-1755589864956_1755589864957.txt
converted/: .gitkeep  3778b921-cc69-4a93-a7a1-7b4b8e47b76e_Linkedin_Identity_Verification_form.docx  4ee6c1ce-4bbf-421f-956c-e9df32a901d6_6-CSS_lec-B.docx  5ae7c32b-9645-4ab7-beb5-6cf2a72bab9a_Chapter_3.docx  6af01644-1a14-4dc5-b5d2-616802eb9c04_html_lec_1.docx  7803a2ba-9634-47fa-959b-f1076ef0b3de_job_resume.docx  79d9eac2-ecd6-401d-bcae-cdd67e77a327_Usman-Europass-V6.docx  7f3f2980-2356-4661-a328-73cae92114ac_Non-US-Affidavit.docx  a20acd62-cc83-41d7-b0d4-6ce8188ff518_Python_Libraries_Guide_with_Examples.docx  ad87b230-a8c5-4e80-809e-a4c234670195_Chapter2.docx
deploy/: flipdoc.service  nginx-flipdoc.conf
public/image/favicon/: site.webmanifest
services/: layout_analyzer.py  ocr_processor.py  pdf_converter.py
static/: robots.txt  sitemap.xml
static/css/: critical.css  lush.css  style.css
static/js/: animations.js  app.js  simple-app.js
templates/: about.html  base.html  blog.html  faq.html  features.html  how_to.html  index.html  privacy.html
templates/partials/: footer.html  navbar.html
uploads/: .gitkeep
utils/: file_handler.py
