[project]
name = "flipdoc-pdf-converter"
version = "2.0.0"
description = "Professional PDF to Word converter with PaddleOCR-powered OCR, table detection, and layout preservation"
requires-python = ">=3.11"
dependencies = [
    # Core Web Framework
    "flask>=3.1.1",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",

    # PDF Processing
    "pymupdf>=1.26.3",
    "pypdf2>=3.0.1",
    "pdf2image>=1.17.0",

    # OCR Engine (PaddleOCR primary, Tesseract fallback)
    "paddleocr>=2.7.0",
    "pytesseract>=0.3.13",

    # Image Processing
    "pillow>=11.3.0",
    "opencv-python>=4.12.0.88",
    "scipy>=1.13.0",
    "numpy>=2.2.6",

    # Word Document Generation
    "python-docx>=1.2.0",

    # Utilities
    "email-validator>=2.2.0",
    "python-multipart>=0.0.20",

    # Support
    "lxml>=6.0.0",
    "packaging>=25.0",
    "typing-extensions>=4.14.1",
]

[dependency-groups]
dev = []
